# avatar-bot

./: .env.example  .envrc  .gitignore  LICENSE  README.md  avatar-bot.opam  dune  dune-project  flake.nix
.github/workflows/: deploy-workflow.yaml  main-workflow.yaml
lib/: command.ml  command.mli  dune  error.ml  error.mli  input_parameters.ml  input_parameters.mli  telegram_api.ml
lib/command/: command.ml  command.mli  image_processing.ml
lib/input_parameters/: input_parameters.ml  input_parameters.mli
lib/response/: response.ml  response.mli
test/: dune
